[package]
name = "graphframes-rs"
version = "0.1.0"
edition = "2024"

exclude = [
    "/target/",
    "testing/*"
]

[dependencies]
datafusion = "53.1.0"
tokio = {version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "pagerank_benchmark"
harness = false # To disable Rust's default benchmarking and use the Criterion one

[[bench]]
name = "cc_benchmark"
harness = false

[[bench]]
name = "sp_benchmark"
harness = false

[[bin]]
name = "run-algorithm"
path = "src/main.rs"
