[package]
name = "graphframes-rs"
version = "0.0.1"
edition = "2024"

exclude = [
    "/target/",
    "testing/*"
]

[dependencies]
datafusion = "54"
tokio = {version = "1", features = ["full"] }
url = "2"
futures = "0.3"
uuid = {version = "1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "pagerank_benchmark"
harness = false # To disable Rust's default benchmarking and use the Criterion one

[[bench]]
name = "cc_benchmark"
harness = false

[[bench]]
name = "sp_benchmark"
harness = false

[[bin]]
name = "run-algorithm"
path = "src/main.rs"
